load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "state-manager",
    srcs = ["manager.go"],
    importpath = "github.com/OffchainLabs/new-rollup-exploration/state-manager",
    visibility = ["//visibility:public"],
    deps = [
        "//protocol",
        "//util",
    ],
)
