load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "state-manager",
    srcs = [
        "manager.go",
        "manager_provider.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/state-manager",
    visibility = ["//visibility:public"],
    testonly = True,
    deps = [
        "//execution",
        "//protocol",
        "//state-manager/backend",
        "//util",
        "//util/prefix-proofs",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
    ],
)

go_test(
    name = "state-manager_test",
    srcs = ["manager_test.go"],
    embed = [":state-manager"],
    deps = [
        "//protocol",
        "//util/prefix-proofs",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_stretchr_testify//require",
    ],
)
