load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "time",
    srcs = ["time_reference.go"],
    importpath = "github.com/OffchainLabs/bold/time",
    visibility = ["//visibility:public"],
)

go_test(
    name = "time_test",
    srcs = ["time_reference_test.go"],
    embed = [":time"],
)
