load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "commitments.go",
        "fsm.go",
        "option_type.go",
        "simulated_backend_wrapper.go",
        "time_reference.go",
        "util.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/util",
    visibility = ["//visibility:public"],
    deps = [
        "//util/inclusion-proofs",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind/backends",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "util_test",
    srcs = [
        "commitments_test.go",
        "fsm_test.go",
        "time_reference_test.go",
        "util_test.go",
    ],
    embed = [":util"],
    deps = [
        "//util/inclusion-proofs",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//require",
    ],
)
