load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = ["finalized.go"],
    importpath = "github.com/OffchainLabs/bold/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//rpc",
    ],
)
