load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "validator",
    srcs = [
        "challenge_moves.go",
        "challenges.go",
        "events_filter.go",
        "validator.go",
        "vertex_tracker.go",
        "vertex_tracker_states.go",
        "vertex_tracker_transition_table.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/validator",
    visibility = ["//visibility:public"],
    deps = [
        "//protocol",
        "//protocol/sol-implementation",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//state-manager",
        "//util",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "validator_test",
    srcs = [
        "challenge_moves_test.go",
        "challenges_test.go",
        "deploy_rollup_test.go",
        "subchallenges_test.go",
        "validator_test.go",
        "vertex_tracker_test.go",
    ],
    embed = [":validator"],
    deps = [
        "//execution",
        "//protocol",
        "//protocol/sol-implementation",
        "//solgen/go/bridgegen",
        "//solgen/go/challengeV2gen",
        "//solgen/go/ospgen",
        "//solgen/go/rollupgen",
        "//state-manager",
        "//testing/mocks",
        "//util",
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind/backends",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_ethereum_go_ethereum//core",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_offchainlabs_nitro//util/headerreader:go_default_library",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
