load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "validator",
    srcs = [
        "challenges.go",
        "edge_sync.go",
        "edge_tracker.go",
        "edge_tracker_states.go",
        "edge_tracker_transition_table.go",
        "events_filter.go",
        "validator.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/validator",
    visibility = ["//visibility:public"],
    deps = [
        "//protocol",
        "//protocol/sol-implementation",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//state-manager",
        "//util",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "validator_test",
    srcs = [
        "edge_tracker_test.go",
        "validator_example_test.go",
        "validator_test.go",
    ],
    embed = [":validator"],
    deps = [
        "//protocol",
        "//protocol/sol-implementation",
        "//solgen/go/rollupgen",
        "//state-manager",
        "//testing/mocks",
        "//testing/setup:setup_lib",
        "//util",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//ethclient",
        "@com_github_offchainlabs_nitro//util/headerreader",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_stretchr_testify//require",
    ],
)
