load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backend",
    srcs = ["backend.go"],
    importpath = "github.com/OffchainLabs/bold/api/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//api/db",
        "//chain-abstraction:protocol",
        "//challenge-manager/chain-watcher",
        "//challenge-manager/edge-tracker",
        "//containers/option",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_pkg_errors//:errors",
    ],
)
