[package]
name = "arbutil"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
digest = { workspace = true }
eyre = { workspace = true }
fnv = { workspace = true }
hex = { workspace = true }
num-traits = { workspace = true }
siphasher = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }
ruint2 = { workspace = true }
wasmparser = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
num_enum = { workspace = true }
