[package]
name = "bench"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "benchbin"
path = "src/bin.rs"

[dependencies]
eyre = "0.6.5"
prover = { path = "../prover" }
clap = { version = "4.4.8", features = ["derive"] }
gperftools = { version = "0.2.0", optional = true }

[features]
counters = []
cpuprof = ["gperftools"]
heapprof = ["gperftools", "gperftools/heap"]
