[package]
name = "bench"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "benchbin"
path = "src/bin.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
gperftools = { workspace = true, optional = true }
prover = { workspace = true }

[features]
counters = []
cpuprof = ["gperftools"]
heapprof = ["gperftools", "gperftools/heap"]
