[package]
name = "caller-env"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
brotli = { path = "../brotli/", optional = true }
num_enum.workspace = true
rand_pcg = { version = "0.3.1", default-features = false }
rand = { version = "0.8.4", default-features = false }
wasmer = { path = "../tools/wasmer/lib/api", optional = true }

[features]
default = ["brotli"]
brotli = ["dep:brotli"]
static_caller = []
wasmer_traits = ["dep:wasmer", "brotli?/wasmer_traits"]
