[package]
name = "caller-env"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
brotli = { workspace = true, optional = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
wasmer = { workspace = true, optional = true }

[features]
default = ["brotli"]
brotli = ["dep:brotli"]
static_caller = []
wasmer_traits = ["dep:wasmer", "brotli?/wasmer_traits"]
